Strateg_Disabled_Number

--- a/src/UI/app/SpeedGoalPage/SpeedGoalNew.module.css
+++ b/src/UI/app/SpeedGoalPage/SpeedGoalNew.module.css
@@ -369,3 +369,7 @@ input[type="search"]::-webkit-input-placeholder {
     display: block;
     background-color: #005475;
 }
+
+.select {
+    font-family: "Montserrat";
+}
