--- a/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
+++ b/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
@@ -119,8 +119,8 @@ input[type="search"]::-webkit-input-placeholder {
 
 .blockSelect {
     position: relative;
-    
-    & > img:hover {
+
+    &>img:hover {
         background-color: rgb(240, 240, 240);
         border-radius: 20%;
     }
@@ -199,6 +199,7 @@ input[type="search"]::-webkit-input-placeholder {
     margin-right: 1%;
     margin-left: 2%;
 }
+
 .image:hover {
     background-color: rgb(240, 240, 240);
     border-radius: 20%;
@@ -209,6 +210,7 @@ input[type="search"]::-webkit-input-placeholder {
     cursor: pointer;
     margin-right: 0.5%;
 }
+
 .main {
     position: relative;
     height: calc(100vh - 160px - 24px - 25px);
@@ -221,22 +223,31 @@ input[type="search"]::-webkit-input-placeholder {
     align-items: center;
     row-gap: 1%;
 }
+
 .editorContainer {
     margin-top: 20px;
-    position: relative; /* Это позволит дочернему элементу быть позиционированным относительно этого контейнера */
-    margin-bottom: 16px; /* Расстояние между редакторами */
-  }
-  
-  .deleteIcon {
-    position: absolute; /* Позиционируем элемент абсолютно */
-    top: -25px; /* Расстояние от верхней части контейнера */
-    right: -30px; /* Расстояние от правой части контейнера */
-    cursor: pointer; /* Изменяем курсор при наведении на иконку */
-  }
-  .iconAdd{
+    position: relative;
+    /* Это позволит дочернему элементу быть позиционированным относительно этого контейнера */
+    margin-bottom: 16px;
+    /* Расстояние между редакторами */
+}
+
+.deleteIcon {
+    position: absolute;
+    /* Позиционируем элемент абсолютно */
+    top: -25px;
+    /* Расстояние от верхней части контейнера */
+    right: -30px;
+    /* Расстояние от правой части контейнера */
+    cursor: pointer;
+    /* Изменяем курсор при наведении на иконку */
+}
+
+.iconAdd {
     position: relative;
     z-index: 10000;
 }
+
 .iconAdd:hover::after {
     z-index: 10000;
     content: "Создать";
@@ -255,10 +266,11 @@ input[type="search"]::-webkit-input-placeholder {
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
-.iconSave{
+.iconSave {
     position: relative;
     z-index: 10000;
 }
+
 .iconSave:hover::after {
     z-index: 10000;
     content: "Сохранить";
@@ -276,6 +288,7 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
+
 .Teaxtaera {
     min-width: 50%;
     min-height: 10vw;
@@ -311,22 +324,26 @@ textarea::placeholder {
     cursor: pointer;
     transition: all 0.5s ease;
 }
+
 .add:hover {
     background-color: #B4B4B4;
     color: #FFFF;
 }
+
 .nameButton {
     font-size: 14px;
     font-family: 'Montserrat';
     color: #3A3A3A;
     font-weight: 400;
 }
+
 .add:hover span {
     font-size: 14px;
     font-family: 'Montserrat';
     font-weight: 400;
     color: #FFFF;
 }
+
 .add div {
     color: #3A3A3A;
     font-size: 14px;
@@ -401,4 +418,8 @@ textarea::placeholder {
 .activeTextSelectHeader::before {
     display: block;
     background-color: #005475;
+}
+
+.select {
+    font-family: "Montserrat";
 }
