--- a/src/UI/app/StatisticsPage/StatisticsContent.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsContent.module.css
@@ -281,6 +281,8 @@ input[type="search"]::-webkit-input-placeholder {
         justify-content: space-between;
         width: 90px;
         height: 50px;
+        min-width: 90px;
+        min-height: 50px;
         border: solid 2px #B4B4B4;
         text-align: center;
 
