--- a/src/UI/app/StatisticsPage/StatisticsNew.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsNew.module.css
@@ -192,6 +192,7 @@ input[type="search"]::-webkit-input-placeholder {
         column-gap: 5px;
 
         & .element{
+            font-family: "Montserrat";
             width:30%;
             max-width:30%;
             height: 25px;
@@ -243,6 +244,8 @@ input[type="search"]::-webkit-input-placeholder {
         justify-content: space-between;
         width: 90px;
         height: 50px;
+        min-width: 90px;
+        min-height: 50px;
         border: solid 2px #B4B4B4;
         text-align: center;
 
