--- a/src/UI/app/StatisticsPage/StatisticsContent.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsContent.module.css
@@ -522,3 +522,77 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-color: rgb(240, 240, 240);
     z-index: 100;
 }
+.modalDelete {
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalDeleteElement {
+    position: relative;
+    height: 120px;
+    width: 300px;
+    left: 10%;
+    top: -5%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.modalRow1{
+    display: flex;
+    flex-direction: row;
+    min-width: 280px;
+}
+
+.modalRow2 {
+    display: flex;
+    flex-direction: row;
+    column-gap: 5px;
+    margin-left: auto;
+    margin-right: 5px;
+}
+
+.btnYes {
+    height: 25px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: green;
+    transition: background-color 0.3s ;
+    &:hover{
+        background-color: rgb(7, 107, 7);
+    }
+}
+
+.btnNo {
+    height: 25px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: red;
+    transition: background-color 0.3s ;
+    &:hover{
+        background-color: rgb(185, 6, 6);
+    }
+}
+
+.text{
+    font-weight: 400;
+    font-family: 'Montserrat';
+    color: rgb(58, 58, 58);
+    font-size: 14px;
+    line-height: 16px; 
+}
