--- a/src/UI/Custom/MyEditor.css
+++ b/src/UI/Custom/MyEditor.css
@@ -1,17 +1,15 @@
 .demo-wrapper {
-  width: 600px;
+  min-width: 750px;
   border: 1px solid #ccc;
   padding: 10px;
 }
 
 .demo-editor {
   background-color: #f0f8ff;
-  /* Смените цвет фона на нужный */
   padding: 10px;
+  min-width: 750px;
   min-height: 300px;
-  /* Высота редактора */
   color: #000;
-  /* Цвет текста */
 }
 
 .demo-toolbar {
