--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -754,7 +754,7 @@ textarea::placeholder {
     font-family: 'Montserrat';
 }
 
-input[type="checkbox"] {
+/* input[type="checkbox"] {
     appearance: none;
     width: 17px;
     height: 17px;
@@ -770,11 +770,11 @@ input[type="checkbox"] {
   }
   
   input[type="checkbox"]:checked::before {
-    content: "✓"; /* Галочка */
+    content: "✓"; 
     color: white;
     font-size: 12px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+  } */
