--- a/src/UI/app/GoalPage/GoalContent.module.css
+++ b/src/UI/app/GoalPage/GoalContent.module.css
@@ -121,7 +121,7 @@ input[type="search"]::-webkit-input-placeholder {
     flex-direction: row;
     justify-content: end;
     align-items: center;
-    column-gap: 10%;
+    column-gap: 30px;
     margin-left: 5%;
     margin-right: 20px !important;
 }
@@ -286,7 +286,7 @@ input[type="search"]::-webkit-input-placeholder {
 
 .four {
     height: 60%;
-    width: 150px;
+    width: 200px;
     display: flex;
     flex-direction: row;
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
