--- a/src/UI/app/GoalPage/NewGoal.module.css
+++ b/src/UI/app/GoalPage/NewGoal.module.css
@@ -233,14 +233,16 @@ background-color: rgb(240, 240, 240)
 }
 
 .four {
-    height: 60%;
-    width: 150px;
+    /* height: 60%;
+    width: 150px; */
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-right: 1%;
     column-gap: 20px;
+    margin-left: auto;
+    /*  margin-left: auto; */
 }
 
 
