--- a/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
+++ b/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
@@ -189,15 +189,14 @@ input[type="search"]::-webkit-input-placeholder {
 .date {
     height: 60%;
     min-width: 200px;
-    display: flex;
-    flex-direction: row;
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-around; 
     align-items: center;
-    margin-right: 1%;
-    margin-left: 2%;
+    /* text-align: center;
+    vertical-align: middle; */
+    margin-right: auto;
 }
 
 .image:hover {
@@ -269,6 +268,7 @@ input[type="search"]::-webkit-input-placeholder {
 .iconSave {
     position: relative;
     z-index: 10000;
+    margin-left: 10px;
 }
 
 .iconSave:hover::after {
