--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -92,19 +92,21 @@ input[type="search"]::-webkit-input-placeholder {
 
 .editText {
     padding: 0.1% 2%;
-    height: 35%;
-    width: 100%;
+    height: 40px;
+    max-width: 100%;
     background-color: #ffff;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
+    column-gap: 20px;
 }
 
 .imageButton {
     display: flex;
     flex-direction: row;
-    column-gap: 10px;
+    column-gap: 20px;
+    margin-left: auto;
 }
 
 .one {
@@ -321,7 +323,7 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .sixth {
-    height: 60%;
+    /* height: 60%;
     width: 60%;
     display: flex;
     flex-direction: row;
@@ -332,8 +334,9 @@ input[type="search"]::-webkit-input-placeholder {
     align-items: center;
     margin-right: 1%;
     margin-left: 1%;
-    column-gap: 5px;
+    column-gap: 5px; */
     position: relative;
+    /* margin-right: auto; */
 }
 
 .four span {
@@ -652,6 +655,7 @@ textarea::placeholder {
 
 .div {
     position: relative;
+    display: flex;
 }
 
 .div:before {
