--- a/src/UI/app/PostPage/PostContent.module.css
+++ b/src/UI/app/PostPage/PostContent.module.css
@@ -120,10 +120,10 @@ input[type="search"]::-webkit-input-placeholder {
     }
 } */
 
-.item{
+.item {
     max-width: 175px;
-    overflow: hidden;
 }
+
 .itemName span {
     font-style: italic;
     font-size: 12px;
@@ -135,7 +135,8 @@ input[type="search"]::-webkit-input-placeholder {
     position: relative;
     font-family: 'Montserrat';
     max-width: 175px;
-    & option{
+
+    & option {
         font-family: 'Montserrat';
         max-width: 175px;
     }
@@ -143,6 +144,7 @@ input[type="search"]::-webkit-input-placeholder {
 
 .div {
     position: relative;
+    display: flex;
 }
 
 .div:before {
@@ -156,15 +158,15 @@ input[type="search"]::-webkit-input-placeholder {
     z-index: 100;
 }
 
-.actionButton{
+.actionButton {
     margin-left: auto;
     display: flex;
     column-gap: 20px;
 }
 
-.iconAdd{
+.iconAdd {
     position: relative;
-  
+
 }
 
 .iconAdd:hover::after {
@@ -184,7 +186,7 @@ input[type="search"]::-webkit-input-placeholder {
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
-.iconSave{
+.iconSave {
     position: relative;
 }
 
@@ -314,4 +316,36 @@ textarea::placeholder {
     font-family: 'Montserrat';
     color: #3A3A3A;
     font-weight: 400;
+}
+
+.sixth {
+    position: relative;
+}
+
+.policySearch {
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 20px;
+    height: 300px;
+    min-width: 200px;
+    padding: 5px 5px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    font-size: 14px;
+    font-family: "Montserrat";
+    z-index: 10000;
+    overflow: auto;
+    cursor:pointer;
+}
+
+.policySearchItem {
+    display: block;
+    padding: 5px;
+}
+
+.policySearchItem:hover {
+    display: block;
+    background-color: rgb(240, 240, 240);
+
 }
