--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -55,18 +55,10 @@
     /* Добавляет границу */
 }
 
-input[type="search"]::-webkit-input-placeholder {
-    background-image: url('../../image/search.svg');
-    /* Укажите здесь путь к вашему изображению */
-    background-repeat: no-repeat;
-    /* Предотвращает повторение изображения */
-    background-position: right center;
-    /* Располагает изображение слева от текста */
-    font-family: "Montserrat";
-    font-size: 14px;
-    color: #B4B4B4;
-    /* Необязательно: меняет цвет текста плейсхолдера */
-    font-style: italic;
+.searchModal {
+    width: 150px;
+    height: 22px;
+    border-bottom: 1px solid #ccc;
 }
 
 .spanPomoshnik {
@@ -123,8 +115,21 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 20%;
 }
 
-.item {
-    margin-right: 2%;
+.itemTable {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.itemRow1 {
+    margin-left: auto;
+}
+
+.itemRow2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .itemName span {
@@ -235,7 +240,7 @@ input[type="search"]::-webkit-input-placeholder {
 .blockSelect {
     position: relative;
 
-    & > img:hover {
+    &>img:hover {
         background-color: rgb(240, 240, 240);
         border-radius: 20%;
     }
@@ -565,7 +570,7 @@ textarea::placeholder {
     align-items: center;
 }
 
-.modalWindow{
+.modalWindow {
     position: relative;
     height: 80vh;
     max-width: 50vw;
@@ -574,6 +579,7 @@ textarea::placeholder {
     border-radius: 10px;
     padding: 10px;
 }
+
 .modalTable {
     border-collapse: collapse;
     display: block;
@@ -587,38 +593,50 @@ textarea::placeholder {
     cursor: pointer;
 }
 
+
+.modalTable {
+    border-collapse: separate;
+}
+
 .modalTable thead,
 .modalTable tbody {
     display: block;
     width: calc(50vw - 20px);
+
 }
 
 .modalTable tbody {
     max-width: 50vw;
     height: 65vh;
-    /* Ограничиваем высоту для появления скролла */
-    overflow-y: auto;
-    /* Включаем скролл */
+    margin-top: 5px;
+    border-radius: 10px;
+
+}
+
+.modalTable tbody tr {
+    display: flex;
+    column-gap: 5px;
 }
 
 .modalTable th {
     width: calc(25vw - 13.5px);
     padding: 10px;
-    border: 3px solid #005475;
-    border-bottom: 1px solid #005475;
     white-space: nowrap;
     vertical-align: top;
+
 }
 
 .modalTable td {
-    font-family: 'Montserrat';
     width: 25vw;
-    border: 2px solid #005475;
-    border-top: 1px solid #005475;
+    height: calc(65vh - 50px);
+    display: flex;
+    row-gap: 5px;
+    flex-direction: column;
+    overflow-y: auto;
+    font-family: 'Montserrat';
     white-space: nowrap;
-    /* Чтобы содержимое не переносилось */
     vertical-align: top;
-    /* Выравнивание содержимого по верхнему краю */
+
 }
 
 .modalTable thead th {
@@ -628,15 +646,19 @@ textarea::placeholder {
     position: sticky;
     top: 0;
     z-index: 1;
-    /* Чтобы шапка оставалась видимой при скролле */
+    border-radius: 10px;
 }
 
 .row {
     padding: 5px;
     display: flex;
-    column-gap: 5px;
-    border: 1px solid #005475;
+    align-items: center;
+    column-gap: 10px;
+    background-color: #f0f3f5;
+    border-radius: 10px;
 }
+
+
 
 .newBlock {
     background-color: rgb(240, 240, 240)
@@ -711,7 +733,7 @@ textarea::placeholder {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
     padding: 10px;
-    top:-10%;
+    top: -10%;
 }
 
 
@@ -728,8 +750,9 @@ textarea::placeholder {
     width: 40px;
     border-radius: 10px;
     background-color: #005475;
-    transition: background-color 0.3s ;
-    &:hover{
+    transition: background-color 0.3s;
+
+    &:hover {
         background-color: #02445e;
     }
 }
@@ -740,38 +763,40 @@ textarea::placeholder {
     border-radius: 10px;
     background-color: #ffff;
     border: 1px solid #005475;
-    transition: background-color 0.3s ;
-    &:hover{
+    transition: background-color 0.3s;
+
+    &:hover {
         background-color: #eff3f5;
     }
 }
 
-.text{
+.text {
     font-weight: 400;
     font-family: 'Montserrat';
     color: rgb(58, 58, 58);
     font-size: 14px;
 }
 
-.textBtnYes{
+.textBtnYes {
     font-weight: 400;
     font-family: 'Montserrat';
     color: #ffff;
     font-size: 14px;
 }
 
-.textBtnNo{
+.textBtnNo {
     font-weight: 400;
     font-family: 'Montserrat';
     color: #005475;
     font-size: 14px;
 }
 
-.textMontserrat{
+.textMontserrat {
     font-family: 'Montserrat';
     font-size: 12px;
 }
-.textMontserrat14{
+
+.textMontserrat14 {
     font-family: 'Montserrat';
 }
 
@@ -779,23 +804,28 @@ input[type="checkbox"] {
     appearance: none;
     width: 17px;
     height: 17px;
-    border: 2px solid #005475;
+    border: 2px solid #DDEBF1;
     border-radius: 4px;
     background-color: white;
     cursor: pointer;
     position: relative;
-  }
-  
-  input[type="checkbox"]:checked {
-    background-color: #26a5d8;
-  }
-  
-  input[type="checkbox"]:checked::before {
-    content: "✓"; 
-    color: white;
+}
+
+input[type="checkbox"]:checked {
+    width: 17px;
+    height: 17px;
+    border: 2px solid #005475;
+    border-radius: 4px;
+    background-color: #DDEBF1;
+}
+
+input[type="checkbox"]:checked::before {
+    content: "✓";
+    color: #005475;
     font-size: 12px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+
+}
