--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,40 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	height: 3px; 
 }
 
+input[type="search"]::-webkit-input-placeholder {
+    background-image: url('./UI/image/search.svg');
+    /* Укажите здесь путь к вашему изображению */
+    background-repeat: no-repeat;
+    /* Предотвращает повторение изображения */
+    background-position: right center;
+    /* Располагает изображение слева от текста */
+    font-family: "Montserrat";
+    font-size: 14px;
+    color: #B4B4B4;
+    /* Необязательно: меняет цвет текста плейсхолдера */
+    font-style: italic;
+}
+
+input[type="search"]:focus {
+    color: #005475;
+    border-bottom: 1px solid rgb(0, 84, 117);
+}
+
+input[type="search"]:focus::placeholder {
+    position: absolute;
+    font-style: normal;
+    font-weight: 100;
+    top: -2px;
+    left: 5%;
+    color: #005475;
+    background-image: none;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    background-image: url('./UI/image/iconСlose.svg');
+    background-position: center;
+}
