--- a/src/UI/app/PostPage/PostContent.module.css
+++ b/src/UI/app/PostPage/PostContent.module.css
@@ -261,7 +261,7 @@ textarea::placeholder {
 
 .post {
     height: 5vh;
-    width: 50%;
+    width: 30%;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -284,11 +284,18 @@ textarea::placeholder {
     color: #FFFF;
 }
 
+.postNested{
+    width: 100%;
+    white-space: nowrap;   
+    overflow: hidden;  
+    text-overflow: ellipsis;  
+}
+
 .nameButton {
     font-size: 12px;
     font-family: 'Montserrat';
     color: #3A3A3A;
-    font-weight: 400;
+    font-weight: 400;    
 }
 
 .sixth {
