--- a/src/UI/app/PostPage/PostContent.module.css
+++ b/src/UI/app/PostPage/PostContent.module.css
@@ -105,10 +105,12 @@
 }
 
 .select {
-    position: relative;
-    font-family: 'Montserrat';
     width:100%;
     max-width:100%;
+    position: relative;
+    font-family: 'Montserrat';
+    overflow: hidden;         
+    text-overflow: ellipsis;          
 }
 
 .div {
