--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -941,6 +941,14 @@ input[type="checkbox"]:checked::before {
     color: grey;
 }
 
+.headerText{
+    white-space: nowrap;
+    font-weight: 600;
+    font-family: 'Montserrat';
+    color: #3A3A3A;
+    font-size: 12px;
+    text-align: center;
+}
 /* .listUL {
     display: flex;
     flex-direction: row;
