--- a/src/UI/app/ProjectPage/ProjectNew.module.css
+++ b/src/UI/app/ProjectPage/ProjectNew.module.css
@@ -8,7 +8,9 @@
 }
 
 .header {
-    min-height: 170px;
+    max-width: 100%;
+    min-height: 120px;
+    max-height: 170px;
     display: flex;
     flex-direction: column;
     box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.25);
@@ -16,13 +18,13 @@
 }
 
 .fon {
-    min-height: 40px;
+    height: 32px;
     background-color: #005475;
     border-radius: 0px 8px 0px 0px;
 }
 
 .pomoshnikSearch {
-    min-height: 50px;
+    height: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -79,17 +81,22 @@
 
 .editText {
     padding: 0.1% 2%;
-    min-height: 70px;
-    width: 100%;
+    max-width: 100%;
     background-color: #ffff;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
+    column-gap: 10px;
+    row-gap: 10px;
 }
 
 .item {
     margin-right: 20px;
+    width:170px;
+    max-width:170px;
+    overflow: hidden;  
 }
 
 .itemLast {
@@ -301,11 +308,16 @@
 }
 
 .select {
+    width:100%;
+    max-width:100%;
     position: relative;
     font-family: 'Montserrat';
+    overflow: hidden;         
+    text-overflow: ellipsis; 
 }
 
 .div {
+    max-width:100%;
     position: relative;
 }
 
@@ -322,7 +334,7 @@
 
 .main {
     position: relative;
-    height: calc(100vh - 170px - 24px - 25px);
+    height: calc(100vh - 150px);
     width: 100%;
     overflow-y: auto;
     background-color: #B4B4B4;
