--- a/src/UI/app/PostPage/PostContent.module.css
+++ b/src/UI/app/PostPage/PostContent.module.css
@@ -156,6 +156,7 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
+    z-index: 2;
 }
 
 .iconSave {
@@ -349,7 +350,7 @@ textarea::placeholder {
 .modalWindow {
     left: 10%;
     position: relative;
-    height: 80vh;
+    height: 75vh;
     max-width: 26vw;
     background-color: #fff;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
@@ -448,6 +449,9 @@ textarea::placeholder {
 }
 
 .itemRow2 {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
     margin-left: auto;
 }
 
