--- a/src/UI/app/StatisticsPage/StatisticsNew.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsNew.module.css
@@ -145,15 +145,15 @@
     overflow-y: auto;
 }
 
-.block1{
+
+.block1 {
     flex: 1 1 auto;
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
-.block2{
+.block2 {
     display: flex;
     width: 99%;
     min-height: 60px;
@@ -161,7 +161,7 @@
     column-gap: 5px;
 }
 
-.block3{
+.block3 {
     width: 99%;
     display: flex;
     flex-direction: column;
@@ -170,25 +170,26 @@
     border-top: solid 3px #B4B4B4;
     min-height: 200px;
 
-    & .row1{
+    & .row1 {
         width: 99%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         column-gap: 5px;
 
-        & .element{
+        & .element {
             font-family: "Montserrat";
-            width:30%;
-            max-width:30%;
+            width: 30%;
+            max-width: 30%;
             height: 25px;
-            border-bottom:solid 1px #B4B4B4;
+            border-bottom: solid 1px #B4B4B4;
         }
     }
 
-    & .row2{
+    & .row2 {
         min-height: 85%;
-        & textarea{
+
+        & textarea {
             width: 99%;
             min-height: 100%;
             padding: 15px;
@@ -196,7 +197,7 @@
             overflow-y: auto;
         }
     }
-    
+
 }
 
 
@@ -272,28 +273,28 @@
     &:hover {
         cursor: pointer;
         background-color: #8a8989;
-        
+
         &:svg path {
             fill: #005475;
         }
-        
+
     }
 
     & img {
-     margin-top: 10px; 
+        margin-top: 10px;
     }
 }
 
 
-.textGrey{
-    color:grey;
+.textGrey {
+    color: grey;
 }
 
 input[type="date"] {
     position: relative;
-  }
-  
-  input[type="date"]::-webkit-calendar-picker-indicator {
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
     position: absolute;
     top: 0;
     left: 0;
@@ -303,7 +304,7 @@ input[type="date"] {
     height: auto;
     color: transparent;
     background: transparent;
-  }
+}
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -312,7 +313,8 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 input[type="number"] {
-    -moz-appearance: textfield; /* Firefox */
+    -moz-appearance: textfield;
+    /* Firefox */
 }
 
 .textMontserrat {
