--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .wrapper{
-    min-height: 100vh;
-    min-width: 100%;
+    height: 100vh;
+    width: 100%;
     background-color: #005475;
     overflow: hidden;
     font-family: 'Montserrat';
 }
 .messages{
-    min-height: 100vh;
-    min-width: 100%;
+    height: 100vh;
+    width: 100%;
     display: grid;
     grid-template-columns: 50px 1fr;
     grid-template-rows: 24px 1fr;
