--- a/src/UI/app/ProjectPage/ProjectContent.module.css
+++ b/src/UI/app/ProjectPage/ProjectContent.module.css
@@ -360,77 +360,11 @@
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
-.table {
-    width: 100%;
-
-    & caption {
-        height: 25px;
-        font-family: 'Montserrat';
-        font-size: 16px;
-        font-weight: 600;
-        background: #005475;
-    }
-
-    & tr {
-        height: 25px;
-    }
-
-    & .nameRow {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        color: #ffff;
-        position: relative;
-
-        & img {
-            position: absolute;
-            right: 0;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-        & img:hover {
-            background-color:#14688a;
-            border-radius: 20%;
-        }
-    }
-
-    & tbody {
-        height: 3vh;
-        font-family: 'Montserrat';
-        font-size: 16px;
-        color: #3A3A3A;
-        text-align: center;
-        background: #ffff;
-    }
-    input{
-        width: 100%;
-    }
-    & .numberTableColumn {
-        width: 2%;
-    }
-
-    & .nameTableColumn {
-        text-align: start;
-        width: 76%;
-    }
-
-    & .imageTableColumn {
-        width: 8%;
-    }
-
-    & .dateTableColumn {
-        width: 8%;
-    }
-
-    & .imageTableColumn {
-        width: 2%;
-       & :hover{
-        background-color: rgb(240, 240, 240);
-        border-radius: 20%;
-        cursor: pointer;
-        }
-    }
+.activeText {
+    color: #005475;
+    text-align: center;
+}
+.completedText {
+    color: grey;
+    text-align: center;
 }
