--- a/src/UI/app/ProjectPage/ProjectNew.module.css
+++ b/src/UI/app/ProjectPage/ProjectNew.module.css
@@ -8,8 +8,8 @@
 }
 
 .header {
+    flex: 0 0 120px; 
     max-width: 100%;
-    min-height: 120px;
     max-height: 170px;
     display: flex;
     flex-direction: column;
@@ -18,7 +18,7 @@
 }
 
 .fon {
-    height: 32px;
+    min-height: 32px;
     background-color: #005475;
     border-radius: 0px 8px 0px 0px;
 }
@@ -94,9 +94,9 @@
 
 .item {
     margin-right: 20px;
-    width:170px;
-    max-width:170px;
-    overflow: hidden;  
+    width: 170px;
+    max-width: 170px;
+    overflow: hidden;
 }
 
 .itemLast {
@@ -113,8 +113,8 @@
 .blockSelect {
     position: relative;
     margin-right: 30px;
-    
-    & > img:hover {
+
+    &>img:hover {
         background-color: rgb(240, 240, 240);
         border-radius: 20%;
     }
@@ -308,16 +308,16 @@
 }
 
 .select {
-    width:100%;
-    max-width:100%;
+    width: 100%;
+    max-width: 100%;
     position: relative;
     font-family: 'Montserrat';
-    overflow: hidden;         
-    text-overflow: ellipsis; 
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .div {
-    max-width:100%;
+    max-width: 100%;
     position: relative;
 }
 
@@ -334,7 +334,8 @@
 
 .main {
     position: relative;
-    height: calc(100vh - 150px);
+    flex: 1; 
+    height: auto;
     width: 100%;
     overflow-y: auto;
     background-color: #B4B4B4;
@@ -346,77 +347,6 @@
     row-gap: 3%;
 }
 
-.table {
-    width: 100%;
-
-    & caption {
-        height: 25px;
-        font-family: 'Montserrat';
-        font-size: 16px;
-        font-weight: 600;
-        background: #005475;
-    }
-
-    & tr {
-        height: 25px;
-    }
-
-    & .nameRow {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        color: #ffff;
-        position: relative;
-
-        & img {
-            position: absolute;
-            right: 0;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-        & img:hover {
-            background-color:#14688a;
-            border-radius: 20%;
-        }
-    }
-
-    & tbody {
-        height: 3vh;
-        font-family: 'Montserrat';
-        font-size: 16px;
-        color: #3A3A3A;
-        text-align: center;
-        background: #ffff;
-    }
-    input{
-        width: 100%;
-    }
-    & .numberTableColumn {
-        width: 2%;
-    }
-
-    & .nameTableColumn {
-        text-align: start;
-        width: 76%;
-    }
-
-    & .imageTableColumn {
-        width: 8%;
-    }
-
-    & .dateTableColumn {
-        width: 8%;
-    }
-
-    & .imageTableColumn {
-        width: 2%;
-       & :hover{
-        background-color: rgb(240, 240, 240);
-        border-radius: 20%;
-        cursor: pointer;
-        }
-    }
+.active{
+    color: #005475;
 }
