--- a/src/UI/app/ProjectPage/Program/Create/ProgramNew.module.css
+++ b/src/UI/app/ProjectPage/Program/Create/ProgramNew.module.css
@@ -8,8 +8,9 @@
 }
 
 .header {
+    flex: 0 0 120px; 
     max-width: 100%;
-    min-height: 170px;
+    max-height: 170px;
     display: flex;
     flex-direction: column;
     box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.25);
@@ -17,13 +18,13 @@
 }
 
 .fon {
-    min-height: 40px;
+    min-height: 32px;
     background-color: #005475;
     border-radius: 0px 8px 0px 0px;
 }
 
 .pomoshnikSearch {
-    min-height: 50px;
+    height: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -69,7 +70,7 @@
 }
 
 .spanPomoshnik::after {
-    content: 'ПРОГРАММЫ И ПРОЕКТЫ';
+    content: 'СОЗДАТЬ ПРОГРАММУ';
     white-space: nowrap;
     position: absolute;
     left: 0;
@@ -81,8 +82,6 @@
 .editText {
     padding: 0.1% 2%;
     max-width: 100%;
-    min-height: 70px;
-    margin-top: 10px;
     background-color: #ffff;
     display: flex;
     flex-direction: row;
@@ -94,9 +93,15 @@
 }
 
 .item {
-    margin-right: 10px;
+    margin-right: 20px;
+    width: 170px;
+    max-width: 170px;
+    overflow: hidden;
 }
 
+.itemLast {
+    margin-right: 50px;
+}
 
 .nameList {
     color: #3A3A3A;
@@ -107,9 +112,9 @@
 
 .blockSelect {
     position: relative;
-    margin-right: 5px;
+    margin-right: 30px;
 
-    & > img:hover {
+    &>img:hover {
         background-color: rgb(240, 240, 240);
         border-radius: 20%;
     }
@@ -119,7 +124,7 @@
     display: block;
 }
 
-.optionNumber li:nth-child(n+2):after{
+.optionNumber li:nth-child(n+2):after {
     content: counter(item);
     position: absolute;
     bottom: 0;
@@ -140,22 +145,25 @@
     cursor: pointer;
     padding: 5px;
     padding-bottom: 8px;
-    & .blackStrategy{
+
+    & .blackStrategy {
         margin-top: 10px;
         margin-bottom: 15px;
         font-family: 'Montserrat';
         font-weight: 400;
         font-size: 14px;
     }
-    & .blackStrategy:before{
+
+    & .blackStrategy:before {
         content: '';
         position: absolute;
         height: 1px;
         width: 98%;
         bottom: 0;
         top: 45px;
-        background-color:rgb(240, 240, 240);
+        background-color: rgb(240, 240, 240);
     }
+
     & li {
         margin-left: 15px;
         counter-increment: item;
@@ -188,6 +196,7 @@
     height: 20px;
     background-color: rgb(240, 240, 240)
 }
+
 .optionNumber li:before {
     content: '';
     position: absolute;
@@ -262,85 +271,9 @@
     display: block;
 }
 
-.image:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
-    cursor: pointer;
-}
-
-.itemName span {
-    font-style: italic;
-    font-size: 12px;
-    font-family: 'Montserrat';
-    font-weight: 400;
-}
-
-.select {
+.iconSave {
     position: relative;
-    font-family: 'Montserrat';
-}
-
-.div {
-    position: relative;
-}
-
-.div:before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: rgb(240, 240, 240);
-    z-index: 100;
-}
-
-.main {
-    position: relative;
-    height: calc(100vh - 170px - 24px - 25px);
-    flex-grow: 1;
-    flex-shrink: 1;
-    height: 10vh; 
-    overflow-y: auto;
-    background-color: #B4B4B4;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 3%;
-}
-
-.actionButton{
     margin-left: auto;
-    display: flex;
-    column-gap: 20px;
-}
-
-.iconAdd{
-    position: relative;
-  
-}
-
-.iconAdd:hover::after {
-    content: "Создать";
-    white-space: nowrap;
-    position: absolute;
-    width: 80px;
-    height: 20px;
-    bottom: -120%;
-    left: -120%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3A3A3A;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
-}
-
-.iconSave{
-    position: relative;
 }
 
 .iconSave:hover::after {
@@ -358,13 +291,62 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
 }
 
-.activeText {
-    color: #005475;
-    text-align: center;
+.image:hover {
+    background-color: rgb(240, 240, 240);
+    border-radius: 20%;
+    cursor: pointer;
 }
-.completedText {
-    color: grey;
-    text-align: center;
+
+.itemName span {
+    font-style: italic;
+    font-size: 12px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+
+.select {
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    font-family: 'Montserrat';
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.div {
+    max-width: 100%;
+    position: relative;
+}
+
+.div:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(240, 240, 240);
+    z-index: 100;
+}
+
+.main {
+    position: relative;
+    flex: 1; 
+    height: auto;
+    width: 100%;
+    overflow-y: auto;
+    background-color: #B4B4B4;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 3%;
+}
+
+.active{
+    color: #005475;
 }
