--- a/src/UI/app/ProjectPage/Start/Update/StartContent.module.css
+++ b/src/UI/app/ProjectPage/Start/Update/StartContent.module.css
@@ -70,7 +70,7 @@
 }
 
 .spanPomoshnik::after {
-    content: 'СОЗДАТЬ ПРОГРАММЫ И ПРОЕКТЫ';
+    content: 'ПРОГРАММЫ И ПРОЕКТЫ';
     white-space: nowrap;
     position: absolute;
     left: 0;
