--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,37 @@ input[type="search"]::-webkit-search-cancel-button {
     background-image: url('./UI/image/iconСlose.svg');
     background-position: center;
 }
+
+
+input[type="checkbox"] {
+    appearance: none;
+    min-width: 17px;
+    max-width: 17px;
+    min-height: 17px;
+    max-height: 17px;
+    border: 2px solid #DDEBF1;
+    border-radius: 4px;
+    background-color: white;
+    cursor: pointer;
+    position: relative;
+}
+
+input[type="checkbox"]:checked {
+    min-width: 17px;
+    min-width: 17px;
+    max-height: 17px;
+    max-height: 17px;
+    border: 2px solid #005475;
+    border-radius: 4px;
+    background-color: #DDEBF1;
+}
+
+input[type="checkbox"]:checked::before {
+    content: "✓";
+    color: #005475;
+    font-size: 12px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
