--- a/src/UI/app/GoalPage/GoalContent.module.css
+++ b/src/UI/app/GoalPage/GoalContent.module.css
@@ -7,30 +7,6 @@
     box-shadow: 0px 0px 3px 0 rgba(0, 0, 0, 0.5);
 }
 
-/* .header {
-    height: 16%;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.25);
-    z-index: 2;
-} */
-
-/* .fon {
-    height: 25%;
-    background-color: #005475;
-    border-radius: 0px 8px 0px 0px;
-} */
-
-/* .pomoshnikSearch {
-    height: 45%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 2%;
-    padding-right: 2%;
-} */
-
 .pomoshnik {
     display: flex;
     flex-direction: row;
@@ -75,18 +51,6 @@
     font-weight: 600;
     font-size: 12px;
 }
-
-/* .editText {
-    padding: 0.1% 2%;
-    height: 30%;
-    width: 100%;
-    background-color: #ffff;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    column-gap: 2%;
-} */
 
 .one {
     display: flex;
@@ -298,7 +262,7 @@
 
 .main {
     position: relative;
-    height: calc(100vh - 120px - 24px - 25px);
+    flex: 1 0 120px; 
     overflow-y: auto;
     background-color: #F0F0F0;
     padding-top: 1%;
