--- a/src/UI/app/ProjectPage/Project/Create/ProjectNew.module.css
+++ b/src/UI/app/ProjectPage/Project/Create/ProjectNew.module.css
@@ -333,11 +333,9 @@
 }
 
 .main {
-    position: relative;
-    flex: 1; 
-    height: auto;
+    flex: 1 0 120px; 
     width: 100%;
-    overflow-y: auto;
+    overflow: auto;
     background-color: #B4B4B4;
     padding-top: 1%;
     padding-bottom: 1%;
