--- a/src/UI/app/SpeedGoalPage/SpeedGoalNew.module.css
+++ b/src/UI/app/SpeedGoalPage/SpeedGoalNew.module.css
@@ -219,7 +219,7 @@
 }
 .main {
     position: relative;
-    height: calc(100vh - 160px - 24px - 25px);
+    flex: 1 0 120px; 
     overflow-y: auto;
     background-color: #F0F0F0;
     padding-top: 1%;
