--- a/src/UI/app/StatisticsPage/StatisticsNew.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsNew.module.css
@@ -132,7 +132,7 @@
 
 .main {
     position: relative;
-    height: calc(100vh - 120px - 24px - 25px);
+    flex: 1 0 120px; 
     width: 100%;
     max-height: 80vh;
     background-color: #ffff;
@@ -288,33 +288,6 @@
 
 .textGrey {
     color: grey;
-}
-
-input[type="date"] {
-    position: relative;
-}
-
-input[type="date"]::-webkit-calendar-picker-indicator {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: auto;
-    height: auto;
-    color: transparent;
-    background: transparent;
-}
-
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type="number"] {
-    -moz-appearance: textfield;
-    /* Firefox */
 }
 
 .textMontserrat {
