--- a/src/UI/app/StatisticsPage/StatisticsContent.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsContent.module.css
@@ -191,6 +191,7 @@
 }
 
 .block3 {
+    height: 100%;
     width: 99%;
     display: flex;
     flex-direction: column;
@@ -198,35 +199,39 @@
     overflow-y: auto;
     border-top: solid 3px #B4B4B4;
     min-height: 200px;
+}
 
-    & .row1 {
-        width: 99%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        column-gap: 5px;
+.row1 {
+    width: 99%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 5px;
+}
 
-        & .element {
-            font-family: "Montserrat";
-            width: 24%;
-            max-width: 24%;
-            height: 25px;
-            border-bottom: solid 1px #B4B4B4;
-        }
-    }
+.element {
+    font-family: "Montserrat";
+    width: 23%;
+    max-width: 23%;
+    height: 25px;
+    border-bottom: solid 1px #B4B4B4;
+}
 
-    & .row2 {
-        min-height: 85%;
+.row2 {
+    height: 85%;
+    min-height: 85%;
+    width: 99%;
+    min-width: 99%;
+}
 
-        & textarea {
-            width: 99%;
-            min-height: 100%;
-            padding: 15px;
-            resize: none;
-            overflow-y: auto;
-        }
-    }
-
+ .row2__textarea {
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 100%;
+    padding: 15px;
+    resize: none;
+    overflow-y: auto;
 }
 
 
