--- a/src/UI/app/StatisticsPage/StatisticsContent.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsContent.module.css
@@ -153,7 +153,7 @@
 .main {
     position: relative;
     width: 100%;
-    flex: 1 0 120px; 
+    flex: 1 0 120px;
     max-height: 80vh;
     background-color: #ffff;
     padding-top: 1%;
@@ -191,7 +191,7 @@
 }
 
 .block3 {
-    height: 100%;
+    height: auto;
     width: 99%;
     display: flex;
     flex-direction: column;
@@ -222,17 +222,19 @@
     min-height: 85%;
     width: 99%;
     min-width: 99%;
+
+    & textarea {
+        width: 100%;
+        min-width: 100%;
+        height: 100%;
+        min-height: 100%;
+        padding: 15px;
+        resize: none;
+        overflow-y: auto;
+    }
 }
 
- .row2__textarea {
-    width: 100%;
-    min-width: 100%;
-    height: 100%;
-    min-height: 100%;
-    padding: 15px;
-    resize: none;
-    overflow-y: auto;
-}
+
 
 
 .addPoint {
@@ -604,17 +606,22 @@
 
 .tableHintWrapper {
     margin-bottom: 7px;
-    display: inline-block; /* Обеспечивает, что обертка занимает размер содержимого */
-    position: relative; /* Создаем контекст позиционирования */
+    display: inline-block;
+    /* Обеспечивает, что обертка занимает размер содержимого */
+    position: relative;
+    /* Создаем контекст позиционирования */
 }
 
 .tableHintWrapper::after {
-    display: none; /* Скрыто по умолчанию */
+    display: none;
+    /* Скрыто по умолчанию */
     content: "Это  значение будет влиять, только на тип графика (ежемесячный или годовой).";
     position: absolute;
-    bottom: 100%; /* Расположить под элементом */
+    bottom: 100%;
+    /* Расположить под элементом */
     left: 100%;
-    width: 120px; /* Подгоните под нужный размер */
+    width: 120px;
+    /* Подгоните под нужный размер */
     padding: 5px;
     background-color: #696969;
     color: white;
@@ -627,5 +634,6 @@
 }
 
 .tableHintWrapper:hover::after {
-    display: block; /* Показываем всплывающее сообщение при наведении */
+    display: block;
+    /* Показываем всплывающее сообщение при наведении */
 }
