--- a/src/UI/app/StatisticsPage/StatisticsNew.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsNew.module.css
@@ -193,16 +193,16 @@
     min-height: 85%;
     width: 99%;
     min-width: 99%;
-}
 
- .row2__textarea {
-    width: 100%;
-    min-width: 100%;
-    height: 100%;
-    min-height: 100%;
-    padding: 15px;
-    resize: none;
-    overflow-y: auto;
+    & textarea {
+        width: 100%;
+        min-width: 100%;
+        height: 100%;
+        min-height: 100%;
+        padding: 15px;
+        resize: none;
+        overflow-y: auto;
+    }
 }
 
 .deletePoint {
