--- a/src/UI/Custom/Modal/Modal.module.css
+++ b/src/UI/Custom/Modal/Modal.module.css
@@ -68,6 +68,7 @@
     font-family: 'Montserrat';
     white-space: nowrap;
     vertical-align: top;
+
 }
 
 .row {
@@ -78,7 +79,8 @@
     column-gap: 10px;
     background-color: #f0f3f5;
     border-radius: 10px;
-
+    overflow: hidden;
+    text-overflow: ellipsis;
     & input {
         background-color: #f0f3f5;
     }
