--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -355,16 +355,13 @@
     position: absolute;
     top: calc(100% + 5px);
     left: 20px;
-    /* max-height: 100px; */
     height: auto;
     min-width: 200px;
-    padding: 5px 5px;
+    padding: 8px 12px;
     background-color: rgb(255, 255, 255);
-    /* overflow: visible;  */
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
 }
-
 
 .main {
     position: relative;
@@ -472,13 +469,14 @@ textarea::placeholder {
 }
 
 .listUL {
+    height: 30px;
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: center;
     cursor: pointer;
     position: relative;
-    column-gap: 10px;
+    column-gap: 12px;
 }
 
 .listULElement {
@@ -514,15 +512,14 @@ textarea::placeholder {
 
 .policySearchItem:hover {
     display: block;
-    background-color: rgb(240, 240, 240)
+    background-color: rgb(240, 240, 240);
+    border-radius: 8px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
 }
 
 .policySearchItem {
     position: relative;
 }
-
-
-
 
 .listULElementNested {
     display: none;
@@ -561,7 +558,7 @@ textarea::placeholder {
     margin: 0;
     list-style: none;
     z-index: 100;
-    padding-left: 20px;
+    padding-left: 10px;
 
     & li {
         padding: 5px;
@@ -594,10 +591,13 @@ textarea::placeholder {
 .policySearchItemNested:hover {
     display: block;
     background-color: rgb(240, 240, 240);
+    border-radius: 8px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
 }
 
 .policySearchItemNested {
     position: relative;
+    height: 30px;
 }
 
 
