--- a/src/UI/app/ProjectPage/Project/Update/ProjectContent.module.css
+++ b/src/UI/app/ProjectPage/Project/Update/ProjectContent.module.css
@@ -200,10 +200,12 @@
 
 .blockSelect:hover .optionNumber {
     display: block;
+    
 }
 
 /* <--! ---> */
 .option {
+    z-index: 2;
     position: absolute;
     display: none;
     white-space: nowrap;
@@ -213,11 +215,6 @@
     cursor: pointer;
     padding: 5px;
     padding-bottom: 8px;
-
-    & li {
-        counter-increment: item;
-        margin-bottom: 15px;
-    }
 
     & li:last-child {
         margin-bottom: 0;
@@ -234,7 +231,11 @@
 }
 
 .option li {
-    margin-top: 7px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-top: 5px;
+    padding-bottom: 10px;
     position: relative;
     font-family: 'Montserrat';
     font-weight: 400;
@@ -242,24 +243,17 @@
 }
 
 .option li:hover {
-    height: 20px;
     background-color: rgb(240, 240, 240)
 }
-
-
 
 .option li:before {
     content: '';
     position: absolute;
     height: 1px;
     width: 90%;
-    bottom: -4px;
+    bottom: 1px;
     right: 0;
     background-color: rgb(240, 240, 240);
-}
-
-.blockSelect:hover .option {
-    display: block;
 }
 
 .image:hover {
@@ -298,7 +292,7 @@
     width: 100%;
     height: 1px;
     background-color: rgb(240, 240, 240);
-    z-index: 100;
+    z-index: 1;
 }
 
 .main {
